# scafld

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONVENTIONS.md  LICENSE  MANIFEST.in  Makefile  README.md  go.mod  install.sh  package.json  setup.py
.ai/: OPERATORS.md  README.md  config.yaml
.claude/: settings.json
.scafld/: config.yaml
cli/: scafld  trellis
docs/: artifacts.md  cli-reference.md  configuration.md  distribution.md  execution.md  github-flow.md  installation.md  integrations.md  introduction.md  invariants.md  lifecycle.md  llms.txt  operational-contracts.md  package-lock.json  package.json  parity-report.md  planning.md  quickstart.md  release.md  review.md  run-artifacts.md  scope-auditing.md  sourcey-reference.md  sourcey.config.ts  sourcey.md  spec-schema.md  threat-model.md  validation.md  workspaces.md
package/: README.md
package/pypi/: README.md  pyproject.toml
package/pypi/src/scafld_launcher/: __init__.py  install.py
plans/: 1.7.0-cutover.md  llm-performance-cutover.md  positioning.md
scafld/: __main__.py  acceptance.py  adapter_runtime.py  audit_scope.py  command_runtime.py  config.py  error_codes.py  errors.py  execution_runtime.py  git_state.py  handoff_renderer.py  harden_protocol.py  hardening.py  lifecycle_runtime.py  output.py  projections.py  review_artifacts.py  review_packet.py  review_runner.py  review_runtime.py  review_signal.py  review_workflow.py  reviewing.py  runtime_bundle.py  runtime_contracts.py  runtime_guidance.py  session_store.py  spec_lifecycle.py  spec_markdown.py  spec_model.py  spec_parsing.py  (+5 more)
(+627 files in other folders)
