[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scafld"
version = "2.5.2"
description = "Deterministic protocol for multi-phase agent work."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "0state" }]
keywords = ["cli", "go", "markdown", "agents", "workflow"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools"
]

[project.urls]
Homepage = "https://0state.com/scafld"
Documentation = "https://0state.com/scafld/docs"
Repository = "https://github.com/nilstate/scafld"
Issues = "https://github.com/nilstate/scafld/issues"

[project.scripts]
scafld = "scafld_launcher.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
